<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/creationbg"
    android:layout_height="match_parent"
    tools:context=".CreationActivity">

    <TextView
        android:id="@+id/textView_creation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_curve"
        android:textColor="@android:color/white"
        android:padding="10dp"
        android:text="@string/creationTitle"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_creation_strength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/strength"
        android:background="@drawable/wins_curve"
        android:textColor="@android:color/white"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/textView_creation_dexterity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_creation_name" />

    <TextView
        android:id="@+id/textView_creation_dexterity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@drawable/wins_curve"
        android:textColor="@android:color/white"
        android:padding="5dp"
        android:text="@string/dexterity"
        app:layout_constraintBottom_toTopOf="@+id/textView_creation_intelligence"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_creation_strength" />

    <TextView
        android:id="@+id/textView_creation_intelligence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@drawable/wins_curve"
        android:textColor="@android:color/white"
        android:padding="5dp"
        android:text="@string/intelligence"
        app:layout_constraintBottom_toTopOf="@+id/textView_creation_luck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_creation_dexterity" />

    <TextView
        android:id="@+id/textView_creation_luck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/wins_curve"
        android:textColor="@android:color/white"
        android:padding="5dp"
        android:layout_marginStart="32dp"
        android:text="@string/luck"
        app:layout_constraintBottom_toTopOf="@+id/button_creation_finish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_creation_intelligence" />

    <EditText
        android:id="@+id/editText_creation_strength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:background="@drawable/edit_text_colors"
        android:ems="10"
        android:hint="@string/str"
        android:inputType="number"
        android:padding="5dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/editText_creation_dexterity"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editText_creation_name" />

    <EditText
        android:id="@+id/editText_creation_dexterity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:background="@drawable/edit_text_colors"
        android:ems="10"
        android:hint="@string/dex"
        android:inputType="number"
        android:padding="5dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/editText_creation_intelligence"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editText_creation_strength" />

    <EditText
        android:id="@+id/editText_creation_intelligence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:background="@drawable/edit_text_colors"
        android:ems="10"
        android:hint="@string/inte"
        android:inputType="number"
        android:padding="5dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/editText_creation_luck"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editText_creation_dexterity" />

    <EditText
        android:id="@+id/editText_creation_luck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:background="@drawable/edit_text_colors"
        android:ems="10"
        android:hint="@string/luk"
        android:inputType="number"
        android:padding="5dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_creation_finish"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editText_creation_intelligence" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="107dp" />

    <Button
        android:id="@+id/button_creation_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/createCharacter"
        android:padding="10dp"
        android:background="@drawable/button_curve"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="138dp" />

    <TextView
        android:id="@+id/textView_creation_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/small_text_colors"
        android:padding="5dp"
        android:text="@string/limit"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_creation_title" />

    <TextView
        android:id="@+id/textView_creation_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/name"
        android:background="@drawable/wins_curve"
        android:textColor="@android:color/white"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/textView_creation_strength"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <EditText
        android:id="@+id/editText_creation_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:background="@drawable/edit_text_colors"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/editText_creation_strength"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView_creation_warning" />

</androidx.constraintlayout.widget.ConstraintLayout>